--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Champions formula</string>
     <string name="main_list">best players</string>
     <string name="exit">exit</string>
+    <string name="next">next</string>
 </resources>
